perf(faz35): vaka listesini tek seferde çöz — 414 yetki çağrısı yerine 3 (#975)
Liste 138 vakayı göstermek için 5886 ms harcıyordu ve yanıt 6 KB'dı. Maliyet
yükte değil, satır başına sorulan sorulardaydı: politika motoruna vaka başına
üç soru (ürün üyeliği + conflicted + recused) ve veritabanına iki sorgu.
Ürün üyeliği bir istek içinde vakadan vakaya değişmiyor, yani 138 kez sorulan
şeyin 137'si aynı cevabı getiriyordu. Maliyet cevapla değil dava sayısıyla
büyüyordu: 1000 vakada ~40 sn.

`gateFor` kararı liste için bir kez çözüyor: bir üyelik kontrolü, iki toplu
liste okuması. Rapor ve katılımcı sayımı da birer toplu sorgu.

Bu ekonominin bir açığa dönüşmemesi gerekiyordu. Olumsuz bir ilişkiyi boş
liste diye okumak tehlikeli yön: "kimse çekilmemiş" bir arızanın görüntüsüdür
ve tam da çekilmenin alıkoyduğu vakaları verir. Bu yüzden `common-auth`'a
başarısızlığı açıkça bildiren `listObjectsResult` eklendi; mevcut `listObjects`
ona delege ediyor, böylece ikisi ayrışamaz. Kapı, iki okumadan biri
yapılamadıysa hiçbir şey bloklu değilmiş gibi davranmak yerine tüm vakaları
reddediyor.

Aynı toplu sorgu, ES-203 dilim 2'de benim eklediğim vaka-başı katılımcı
sorgusunu da kaldırıyor ve `participantCount`'u bedavaya getiriyor.

Liste ayrıca artık ne gösterdiğini söylüyor: `subject`, `category`, `mode`.
Önceden satırda hex parçası, durum ve tarih vardı; iki vakayı ayırt etmek
için her birini açmak gerekiyordu. Sınır genişlemiyor — liste zaten
`case_viewer` ile kapılı ve bu alanların hepsi aynı okuyucuya detayda açık.

Sözleşmeler testle kilitlendi; ikisi kapı gevşetilerek doğrulandı:
- çatışma listesi okunamazsa hepsi reddedilir  (gevşetilince düşüyor)
- çekilme listesi okunamazsa hepsi reddedilir  (gevşetilince düşüyor)
- 500 vaka da karar verilse 1 üyelik + 2 liste okuması kalır

İlk yazdığım çatışma testi kusurlu koda karşı da geçiyordu — `recused`
stub'lanmadığı için null'dan NPE alıp kapı yanlış sebepten kapanıyordu.
Test ayırt edici hale getirildi.

ethics-service 183/183